# Gross-Pitaevskii-FDM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  main.yml
benchmarking/: benchmarking_1024.inp  benchmarking_128.inp  benchmarking_16.inp  benchmarking_256.inp  benchmarking_32.inp  benchmarking_4.inp  benchmarking_512.inp  benchmarking_64.inp  benchmarking_8.inp  psolver_benchmarking_result.csv  run_psolver_benchmarking.sh
docs/: CMakeLists.txt  Doxyfile  base__domain_8cpp.html  base__domain_8cpp__incl.md5  base__domain_8cpp_source.html  base__domain_8h__dep__incl.md5  base__domain_8h__incl.map  base__domain_8h__incl.md5  base__domain_8h_source.html  base__potential_8cpp.html  base__potential_8cpp__incl.md5  base__potential_8cpp_source.html  base__potential_8h__dep__incl.md5  base__potential_8h__incl.map  base__potential_8h_source.html  base__solver_8cpp__incl.map  base__solver_8cpp_source.html  base__solver_8h__dep__incl.map  base__solver_8h__dep__incl.md5  base__solver_8h__incl.map  base__solver_8h_source.html  base__sweeper_8cpp.html  base__sweeper_8cpp__incl.map  base__sweeper_8cpp__incl.md5  base__sweeper_8cpp_source.html  base__sweeper_8h__dep__incl.map  base__sweeper_8h__incl.map  base__sweeper_8h__incl.md5  class_base_domain.html  class_base_domain.js  class_base_domain__coll__graph.md5  class_base_domain_a0c09d40d12956668d8e24c1e9bbd7822_icgraph.map  class_base_domain_a1bfcbbddd7317754b6190daf7283c80b_icgraph.map  class_base_domain_a1bfcbbddd7317754b6190daf7283c80b_icgraph.md5  class_base_domain_a3c892a19bb330d5a5228977bfb83e3aa_cgraph.md5  class_base_domain_a3c892a19bb330d5a5228977bfb83e3aa_icgraph.map  class_base_domain_a4ec37b33c4592796b13f4ae8da5d3cd3_icgraph.md5  class_base_domain_a5e4ea2bf89c2d46634bb8acd3ccfeea5_icgraph.map  class_base_domain_a729daa564abcaf5bdd37c2dfc63e8137_cgraph.map  class_base_domain_a72ba4101786254c7d88f639eea72fc41_cgraph.md5  (+223 more)
docs/html/: _c_make_lists_8txt.html  annotated.html  annotated_dup.js  base__domain_8cpp__incl.map  base__domain_8h.html  base__domain_8h__dep__incl.map  base__potential_8cpp__incl.map  base__potential_8h.html  base__potential_8h__dep__incl.map  base__potential_8h__incl.md5  base__solver_8cpp.html  base__solver_8cpp__incl.md5  base__solver_8h.html  base__solver_8h__incl.md5  base__sweeper_8h.html  base__sweeper_8h__dep__incl.md5  base__sweeper_8h_source.html  class_base_domain-members.html  class_base_domain__coll__graph.map  class_base_domain__inherit__graph.map  class_base_domain__inherit__graph.md5  class_base_domain_a0c09d40d12956668d8e24c1e9bbd7822_icgraph.md5  class_base_domain_a3c892a19bb330d5a5228977bfb83e3aa_cgraph.map  class_base_domain_a3c892a19bb330d5a5228977bfb83e3aa_icgraph.md5  class_base_domain_a4ec37b33c4592796b13f4ae8da5d3cd3_icgraph.map  class_base_domain_a5e4ea2bf89c2d46634bb8acd3ccfeea5_icgraph.md5  class_base_domain_a729daa564abcaf5bdd37c2dfc63e8137_cgraph.md5  class_base_domain_a72ba4101786254c7d88f639eea72fc41_cgraph.map  class_base_potential.js  (+212 more)
docs/search/: all_1.js  (+36 more)
inputs/: example.inp  example_single.inp  example_sweep.inp  swing.inp
profiling/: profiling.ncu-proj
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
src/configuration/: config_parser.cpp  config_parser.h  parameters.h
src/domain/: base_domain.cpp  base_domain.h  base_domain_copy.cpp  base_domain_copy.h  polar_domain.cpp  polar_domain.h  rect_domain.cpp  rect_domain.h  rect_domain_copy.cpp  rect_domain_copy.h  rectangular_domain.cpp  rectangular_domain.h
src/initial_condition/: initial_condition.cpp  initial_condition.h
src/parallel_solver/crank_nicolson/: cn_rect_psolver.cpp  cn_rect_psolver.cu  cn_rect_psolver.cuh
src/parallel_solver/forward_euler/: fe_rect_psolver.cpp  fe_rect_psolver.cu  fe_rect_psolver.cuh  fe_rect_psolver.h
src/potential/: base_potential.cpp  base_potential.h  harmonic_potential.cpp  harmonic_potential.h
src/serial_solver/: base_serial_solver.cpp  base_serial_solver.h
src/serial_solver/crank_nicolson/: cn_rect_solver.cpp  cn_rect_solver.h  cn_rect_solver_copy.cpp  cn_rect_solver_copy.h  crank_nicolson_rectangular_solver.cpp  crank_nicolson_rectangular_solver.h
src/serial_solver/forward_euler/: fe_rect_solver.cpp  fe_rect_solver.h  forward_euler_rectangular_solver.cpp  forward_euler_rectangular_solver.h
src/solver/: base_solver.cpp  base_solver.h
src/solver/parallel_solver/crank_nicolson/: cn_rect_psolver.cu  cn_rect_psolver.cuh
src/solver/parallel_solver/forward_euler/: fe_rect_psolver.cu  fe_rect_psolver.cuh
src/solver/serial_solver/crank_nicolson/: cn_rect_solver.cpp  cn_rect_solver.h
src/solver/serial_solver/forward_euler/: fe_rect_solver.cpp  fe_rect_solver.h
src/sweeper/: base_sweeper.cpp  base_sweeper.h  g_sweeper.cpp  g_sweeper.h  harmonic_p_sweeper.cpp  harmonic_p_sweeper.h  mpi_distributor.cpp  mpi_distributor.h
src/test/test_domain/: test_base_domain.cpp  test_polar_domain.cpp  test_rect_domain.cpp  test_rectangular_domain.cpp
src/test/test_initial_condition/: test_initial_condition.cpp
src/test/test_mpi/: test_mpi.cpp  test_mpi_cn_rect_solver.cpp
src/test/test_psolver/: test_cn_rect_psolver.cpp  test_cn_rect_psolver.cu  test_cn_rect_psolver.cuh  test_fe_rect_psolver.cpp
src/test/test_solver/: test_base_serial_solver.cpp  test_cn_rect_solver.cpp  test_crank_nicolson_solver.cpp  test_fe_rect_solver copy.cpp  test_fe_rect_solver.cpp  test_fe_rect_solver_rev.cpp  test_forward_euler_rectangular_solver.cpp
test/: CMakeLists.txt  main.cpp
test/test_armadillo/: test_armadillo_linking.cpp
test/test_domain/: test_base_domain.cpp  test_rect_domain.cpp
test/test_initial_condition/: test_initial_condition.cpp
test/test_mpi/: test_mpi.cpp
test/test_psolver/: test_cn_rect_psolver.cpp  test_cn_rect_psolver.cu  test_cn_rect_psolver.cuh  test_fe_rect_psolver.cpp  test_fe_rect_psolver.cu
test/test_solver/: test_base_solver.cpp  test_cn_rect_solver.cpp  test_fe_rect_solver.cpp
test/test_sweeper/: test_base_sweeper.cpp  test_g_sweeper.cpp  test_potential_sweeper.cpp
visualization/: crank-nicolson.ipynb  forward_euler.ipynb
(+249 files in other folders)
